kubernetes/apps/default/sabnzbd/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: ghcr.io/linuxserver/sabnzbd:3.7.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: sabnzbd-downloads
              mountPath: /downloads
            - name: sabnzbd-incomplete-downloads
              mountPath: /incomplete-downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads-pvc
        - name: sabnzbd-incomplete-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-incomplete-downloads-pvc
