kubernetes/apps/default/sabnzbd/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: sabnzbd
  selector:
    app: sabnzbd
