kubernetes/apps/default/sabnzbd/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  labels:
    app: sabnzbd-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sabnzbd.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
  tls:
    - hosts:
        - sabnzbd.lab.zibbp.net
      secretName: lab-zibbp-net-tls
